# OptiX-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  point_source.cu  simple_dom.cu  sphere.cu
